--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,13 +4,14 @@
 
     <uses-permission android:name="android.permission.INTERNET"/>
     <application
+        android:theme="@style/Theme.Pokédex"
         android:usesCleartextTraffic="true"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
-        android:supportsRtl="true"
-        android:theme="@style/Theme.Pokédex">
+        android:supportsRtl="true">
+        <!--android:theme="@style/Theme.Pokédex">-->
         <activity
             android:name=".MainActivity"
             android:exported="true">
