--- a/app/build.gradle
+++ b/app/build.gradle
@@ -57,12 +57,15 @@ dependencies {
     implementation "com.airbnb.android:lottie:$lottieVersion"
 
     def nav_version = "2.3.5"
-    implementation("androidx.cardview:cardview:1.0.0")
+
     implementation("androidx.navigation:navigation-fragment-ktx:$nav_version")
     implementation("androidx.navigation:navigation-ui-ktx:$nav_version")
+    implementation("androidx.navigation:navigation-dynamic-features-fragment:$nav_version")
+
+    implementation("androidx.cardview:cardview:1.0.0")
     implementation 'com.squareup.picasso:picasso:2.71828'
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
-    implementation 'com.squareup.retrofit2:converter-gson:2.4.0'
+    implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
     implementation 'androidx.core:core-ktx:1.6.0'
     implementation 'androidx.appcompat:appcompat:1.3.1'
     implementation 'com.google.android.material:material:1.4.0'
