--- a/build.gradle
+++ b/build.gradle
@@ -6,9 +6,9 @@ buildscript {
 
     }
     dependencies {
-        def nav_version = "2.3.5"
+        def nav_version = '2.4.1'
 
-        classpath 'com.android.tools.build:gradle:7.1.1'
+        classpath 'com.android.tools.build:gradle:7.2.0'
         classpath 'org.jetbrains.kotlin:kotlin-gradle-plugin:1.5.31'
         classpath "androidx.navigation:navigation-safe-args-gradle-plugin:$nav_version"
         // NOTE: Do not place your application dependencies here; they belong
