--- a/app/build.gradle
+++ b/app/build.gradle
@@ -61,12 +61,15 @@ android {
 apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
 dependencies {
+    def pager_version = "0.24.9-beta"
+    implementation "com.google.accompanist:accompanist-pager:$pager_version"
+    implementation "com.google.accompanist:accompanist-pager-indicators:$pager_version"
 
-
-    implementation("io.coil-kt:coil-compose:2.0.0-rc01")
+    implementation("io.coil-kt:coil-svg:2.1.0")
+    implementation("io.coil-kt:coil-compose:2.1.0"
+    )
     implementation 'com.google.android.material:material:1.6.0-alpha01'
 
-    implementation 'com.synnapps:carouselview:0.1.5'
     implementation "androidx.compose.ui:ui:$compose_version"
     implementation "androidx.compose.ui:ui-tooling-preview:$compose_version"
     implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.3.1'
@@ -92,7 +95,6 @@ dependencies {
     implementation "androidx.navigation:navigation-dynamic-features-fragment:$nav_version"
 
     implementation("androidx.cardview:cardview:1.0.0")
-    implementation 'com.squareup.picasso:picasso:2.71828'
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
 
